# XR-Swarm-Bridge

./: .gitignore  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_EXECUTION_COMPLETE.md  AUTONOMOUS_SDLC_EXECUTION_REPORT.md  AUTONOMOUS_SDLC_GENERATION_10_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_IMPLEMENTATION_COMPLETE.md  DEPLOYMENT.md  DEPLOYMENT_READY.md  GENERATION_5_COMPLETE.md  GENERATION_6_COMPLETE.md  GENERATION_6_UNIVERSAL_CONSCIOUSNESS_COMPLETE.md  GENERATION_7_9_COMPLETION_REPORT.md  GENERATION_7_AUTONOMOUS_COMPLETION_REPORT.md  PERFORMANCE_REPORT.md  PRODUCTION_DEPLOYMENT_COMPLETE.md  PRODUCTION_DEPLOYMENT_GUIDE.md  README.md  README_SENTIMENT.md  RESEARCH_PAPER.md  docker-compose.production.yml  launch_xr_swarm.sh  requirements.txt  setup.py
deploy/: Dockerfile.ros2  Dockerfile.webapp  docker-compose.prod.yml  nginx-production.conf  nginx.conf  production-optimization.yml
docs/: API.md  ARCHITECTURE.md  AUTONOMOUS_SDLC.md  CI-CD.md  DEPLOYMENT.md
research/: ExperimentalValidationFramework.ts  HyperQuantumConsciousnessEngine.ts  PostQuantumConsciousnessAlgorithms.ts  PublicationDraft.md  QuantumConsciousnessExperiments.ts  README.md  RunExperimentalValidation.ts  TranscendentAIResearchFramework.ts  UltimateValidationExecutor.ts
ros2_ws/: requirements.txt
ros2_ws/src/webrtc_bridge/: CMakeLists.txt  package.xml
ros2_ws/src/webrtc_bridge/scripts/: enhanced_webrtc_server.py  webrtc_server.py
ros2_ws/src/webrtc_bridge/webrtc_bridge/: __init__.py
ros2_ws/src/xr_swarm_core/: CMakeLists.txt  package.xml
ros2_ws/src/xr_swarm_core/scripts/: swarm_coordinator.py
ros2_ws/src/xr_swarm_core/test/: test_integration.py  test_swarm_agent.py
ros2_ws/src/xr_swarm_core/xr_swarm_core/: __init__.py  advanced_resilience.py  error_handler.py  health_monitor.py  swarm_agent_base.py
scripts/: ci-template.yml  launch_simulation.sh  quality_gates.sh  run_tests.sh
(+164 files in other folders)
